[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"



[project]
name = "RFTLib"
version = "0.1.1"
description = ""

authors = [
	{name = "Anthony Markovitz", email = "anthonym6013@gmail.com"}
]

readme = "README.md"
requires-python = ">=3"

classifiers = [
]



[project.urls]
Homepage = "https://github.com/A-t-l-i-s/RFTLib"
"Bug Tracker" = "https://github.com/A-t-l-i-s/RFTLib/issues"



